# SmartWatch

./: .cproject  .project  CMakeLists.txt  README.md  sdkconfig.defaults
docs/: Software_Implementation.MD  class_diagram.drawio
include/: BluetoothDataProcess.h  BluetoothManager.h  Controller.h  FitnessActivity.h  FitnessActivityController.h  FitnessActivityView.h  IObserver.h  ISubject.h  LCDManager.h  MainView.h  NavigationController.h  Notification.h  NotificationController.h  NotificationView.h  Time.h  TimeController.h  View.h  Weather.h  WeatherController.h  WeatherView.h  ui_events.h  ui_helpers.h  ui_theme_manager.h  ui_themes.h
src/: CMakeLists.txt  app_main.cpp  idf_component.yml  spi_lcd_touch_example_main.cpp
src/common/: IObserver.cpp  ISubject.cpp
src/controllers/: Controller.cpp  FitnessActivityController.cpp  NavigationController.cpp  NotificationController.cpp  TimeController.cpp  WeatherController.cpp
src/model/: BluetoothDataProcess.cpp  BluetoothManager.cpp  FitnessActivity.cpp  LCDManager.cpp  Notification.cpp  Time.cpp  Weather.cpp
src/views/: FitnessActivityView.cpp  MainView.cpp  NotificationView.cpp  View.cpp  WeatherView.cpp  ui_helpers.c
src/views/fonts/: ui_font_QuantifyFont_16.c  ui_font_QuantifyFont_70.c
src/views/images/: ui_img_bleIcon.c
src/views/themes/: ui_theme_manager.c  ui_themes.c
ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
ui/components/: ui_comp.c  ui_comp.h  ui_comp_colonlabel.c  ui_comp_colonlabel.h  ui_comp_hook.c  ui_comp_hook.h
ui/screens/: ui_FitnessActivityView.c  ui_MainView.c
