idf_component_register(
    SRCS "app_main.cpp"
         "common/IObserver.cpp"
         "common/ISubject.cpp"
         "views/FitnessActivityView.cpp"
         "views/MainView.cpp"
         "views/NotificationView.cpp"
		 "views/View.cpp"
		 "views/WeatherView.cpp"
		 "views/ui_helpers.c"
		 "views/fonts/ui_font_QuantifyFont_16.c"
		 "views/fonts/ui_font_QuantifyFont_70.c"
		 "views/images/ui_img_bleIcon.c"
		 "views/themes/ui_theme_manager.c"
		 "views/themes/ui_themes.c"
		 "model/LCDManager.cpp"
		 "model/BluetoothManager.cpp"
		 "model/BluetoothDataProcess.cpp"
		 "model/FitnessActivity.cpp"
		 "model/Weather.cpp"
		 "model/Time.cpp"
		 "model/Notification.cpp"
		 "controllers/WeatherController.cpp"
		 "controllers/FitnessActivityController.cpp"
		 "controllers/NotificationController.cpp"
		 "controllers/TimeController.cpp"
		 "controllers/NavigationController.cpp"
		 "controllers/Controller.cpp"
	INCLUDE_DIRS "."
		 "../include"
	REQUIRES
		 bt
		 nvs_flash
)

